# arc-backup-filter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  filter_backup.bat  filter_backup_by_daterange.ps1  filter_backup_by_daterange.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
